--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,16 @@ after_success:
   - docker push halczy/multi-nginx
   - docker push halczy/multi-server
   - docker push halczy/multi-worker
+  
+deploy:
+  provider: elasticbeanstalk
+  region: "ap-southeast-1"
+  app: "multi-docker"
+  env: "MultiDocker-env"
+  bucket_name: "elasticbeanstalk-ap-southeast-1-349607750455"
+  bucket_path: "docker-multi"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
